--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Bienvenue, choisissez votre offre :</h1>
             <div class="logos">
                 <!-- Logo à gauche avec lien -->
-                <a href="https://act-consulting.my.canva.site/" target="_blank">
+                <a href="indexactconsulting.html" target="_blank">
                     <img src="logoactweb.png" alt="Logo ACT Consulting" class="logo left-logo">
                 </a>
                 <!-- Logo à droite -->
