--- a/indexactconsulting.html
+++ b/indexactconsulting.html
@@ -1,30 +1,57 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACT Consulting</title>
-    <link rel="stylesheet" href="stylesacceuil.css">
+    <title>Portfolio Commercial</title>
+    <link rel="stylesheet" href="stylesactconsulting.css">
 </head>
-<body>
+
+<body id="top">
     <div class="background">
-        <header class="header">
-            <div class="profile">
-                <img src="photoprofilefranckbardin.png" alt="Photo de Franck Bardin" class="profile-picture">
+        <header>
+            <!-- Photo de profil -->
+            <div class="profile-photo">
+                <img src="logoactweb.png" alt="Photo de Franck BARDIN">
             </div>
-            <h1 class="header-title">Offre de Franck BARDIN</h1>
+
+            <!-- Navigation principale -->
+            <nav class="header-nav">
+                <ul>
+                    <li><a href="#edito">L'offre</a></li>
+                    <li><a href="#projets">A propos</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </header>
-        <main class="content">
-            <h1>Bienvenue, choisissez votre offre :</h1>
-            <div class="logos">
-                <!-- Logo à gauche avec lien -->
-                <a href="indexactconsulting.html" target="_blank">
-                    <img src="logoactweb.png" alt="Logo ACT Consulting" class="logo left-logo">
-                </a>
-                <!-- Logo à droite -->
-                <img src="logoadditionnel.png" alt="Logo additionnel" class="logo right-logo">
+
+        <!-- Section Édito -->
+        <section id="edito">
+            <h2>It's time to ACT</h2>
+            <div class="vertical-text">
+                <span><span class="bold-letter">A</span>udit</span>
+                <span><span class="bold-letter">C</span>onseil</span>
+                <span><span class="bold-letter">T</span>ransition</span>
             </div>
-        </main>
+        </section>
+
+        <!-- Footer -->
+<div class="footer">
+    <!-- Logo LinkedIn -->
+    <a href="https://www.linkedin.com/in/franck-bardin/" target="_blank" class="linkedin-logo" aria-label="Lien vers LinkedIn">
+        <img src="https://img.icons8.com/win10/512/linkedin.png" alt="Logo LinkedIn">
+    </a>
+
+    <!-- Nom et numéro -->
+    <div class="contact-info">
+        <p>06 10 75 29 44</p>
+        <p>fb.actconsulting.com</p>
+    </div>
+</div>
+
+
     </div>
 </body>
+
 </html>
