--- a/indexactconsulting.html
+++ b/indexactconsulting.html
@@ -16,14 +16,16 @@
                 <img src="logoactweb.png" alt="Photo de Franck BARDIN">
             </div>
 
-            <!-- Navigation principale -->
-            <nav class="header-nav">
-                <ul>
-                    <li><a href="#edito">L'offre</a></li>
-                    <li><a href="#projets">A propos</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+    <button class="menu-toggle" aria-label="Menu">
+        ☰
+    </button>
+    <nav class="header-nav">
+        <ul>
+            <li><a href="indexoffre.html">L'offre</a></li>
+            <li><a href="indexapropos.html">A propos</a></li>
+            <li><a href="indexcontact.html">Contact</a></li>
+        </ul>
+    </nav>
         </header>
 
         <!-- Section Édito -->
@@ -52,6 +54,7 @@
 
 
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
