--- a/indexoffre.html
+++ b/indexoffre.html
@@ -29,7 +29,7 @@
         <section class="offers">
             <!-- Offre Audit -->
             <div class="offer">
-                <img src="Capture d’écran 2024-12-03 à 23.43.11.png" alt="Illustration pour Audit" class="offer-image">
+                <img src="picto01.png">
                 <h2>Audit</h2>
                 <ul>
                     <li>Performance opérationnelle</li>
