--- a/indexoffre.html
+++ b/indexoffre.html
@@ -29,7 +29,7 @@
         <section class="offers">
             <!-- Offre Audit -->
             <div class="offer">
-                <img src="picto01.png">
+                <img src="picto01.png" alt="Illustration pour Audit" class="offer-image">
                 <h2>Audit</h2>
                 <ul>
                     <li>Performance opérationnelle</li>
@@ -40,7 +40,7 @@
             
             <!-- Offre Conseil -->
             <div class="offer">
-                <img src="Capture d’écran 2024-12-03 à 23.45.42.png" alt="Illustration pour Conseil" class="offer-image">
+                <img src="picto02.png" alt="Illustration pour Conseil" class="offer-image">
                 <h2>Conseil</h2>
                 <ul>
                     <li>Cohésion d’équipe</li>
@@ -51,7 +51,7 @@
             
             <!-- Offre Transition -->
             <div class="offer">
-                <img src="Capture d’écran 2024-12-03 à 23.46.15.png" alt="Illustration pour Transition" class="offer-image">
+                <img src="picto03.png" alt="Illustration pour Transition" class="offer-image">
                 <h2>Transition</h2>
                 <ul>
                     <li>Management de transition</li>
